--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "it's Radom color picker website",
   "main": "script.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel colorFlipper.html"
   },
   "author": "delin shabu",
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.10.2",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
