--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "color-flipper",
   "version": "1.0.0",
   "description": "it's Radom color picker website",
-  "main": "script.js",
   "scripts": {
     "test": "jest",
-    "start": "parcel colorFlipper.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "author": "delin shabu",
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.10.2",
-    "process": "^0.11.10",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "main": "main.js"
 }
